added font link, repo link and some body code

--- a/index.html
+++ b/index.html
@@ -4,29 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weather</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <form>
-        <input type="text" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
+    <div class="app">
+      <header>
+        <form>
+          <input type="text" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
 
-        <p>
-          Tuesday 14:49, scattered clouds <br />Humidity: 66%, Wind: 3.13km/h
-        </p>
-      </div>
-      <div>⛅ 12°C</div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/Anelebheng" target="_blank"> Anele Bhengu</a>
-      is <a href="#" target="_blank">open sourced on Github</a> and
-      <a href="#" target="_blank"> hosted on Netlify</a>
-    </footer>
+          <p>
+            Tuesday 14:49, scattered clouds <br />Humidity: 66%, Wind: 3.13km/h
+          </p>
+        </div>
+        <div>⛅ 12°C</div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/Anelebheng" target="_blank">
+          Anele Bhengu</a
+        >
+        is
+        <a
+          href="https://github.com/Anelebheng/vanilla-weather-search-project"
+          target="_blank"
+          >open sourced on Github</a
+        >
+        and
+        <a href="#" target="_blank"> hosted on Netlify</a>
+      </footer>
+    </div>
   </body>
 </html>
