--- a/index.html
+++ b/index.html
@@ -15,20 +15,28 @@
   <body>
     <div class="app">
       <header>
-        <form>
-          <input type="text" placeholder="Enter a city..." required />
-          <input type="submit" value="Search" />
+        <form class="search-form">
+          <input
+            type="text"
+            placeholder="Enter a city..."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
+        <div class="app-data">
+          <div>
+            <h1>Paris</h1>
 
-          <p>
-            Tuesday 14:49, scattered clouds <br />Humidity: 66%, Wind: 3.13km/h
-          </p>
+            <p>
+              Tuesday 14:49, scattered clouds <br />Humidity: 66%, Wind:
+              3.13km/h
+            </p>
+          </div>
+          <div>⛅ 12°C</div>
         </div>
-        <div>⛅ 12°C</div>
       </main>
       <footer>
         This project was coded by
