styled app details

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <main>
         <div class="app-data">
           <div>
-            <h1>Paris</h1>
+            <h1 class="app-city">Paris</h1>
 
-            <p>
+            <p class="app-details">
               Tuesday 14:49, scattered clouds <br />Humidity: 66%, Wind:
               3.13km/h
             </p>
           </div>
-          <div>⛅ 12°C</div>
+          <div app-temperature>⛅ 12°C</div>
         </div>
       </main>
       <footer>
