--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
             <h1 class="app-city">Paris</h1>
 
             <p class="app-details">
-              Tuesday 14:49, scattered clouds <br />Humidity: 66%, Wind:
-              3.13km/h
+              Tuesday 14:49, scattered clouds <br />Humidity:
+              <strong>66%</strong>, Wind:
+              <strong> 3.13km/h </strong>
             </p>
           </div>
-          <div app-temperature>⛅ 12°C</div>
+          <div class="app-temperature-container">
+            <div class="app-icon">⛅</div>
+            <div class="app-temperature">12</div>
+            <div class="app-unit">°C</div>
+          </div>
         </div>
       </main>
       <footer>
