--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weather</title>
     <link rel="stylesheet" href="style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="text"
             placeholder="Enter a city..."
             required
             class="search-form-input"
+            id="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
         </form>
@@ -28,7 +31,7 @@
       <main>
         <div class="app-data">
           <div>
-            <h1 class="app-city">Paris</h1>
+            <h1 class="app-city" id="city">Paris</h1>
 
             <p class="app-details">
               Tuesday 14:49, scattered clouds <br />Humidity:
@@ -58,5 +61,6 @@
         <a href="#" target="_blank"> hosted on Netlify</a>
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
