--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <main>
         <div class="app-data">
           <div>
-            <h1 class="app-city" id="city">Paris</h1>
+            <h1 class="app-city" id="city"></h1>
 
             <p class="app-details">
               Tuesday 14:49, scattered clouds <br />Humidity:
@@ -41,7 +41,7 @@
           </div>
           <div class="app-temperature-container">
             <div class="app-icon">⛅</div>
-            <div class="app-temperature">12</div>
+            <div class="app-temperature" id="temperature"></div>
             <div class="app-unit">°C</div>
           </div>
         </div>
