--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weather</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,13 +25,18 @@
             class="search-form-input"
             id="search-form-input"
           />
-          <input type="submit" value="Search" class="search-form-button" />
+          <input
+            type="submit"
+            value="Search"
+            class="search-form-button"
+            id="search-form-button"
+          />
         </form>
       </header>
       <main>
         <div class="app-data">
           <div>
-            <h1 class="app-city" id="city"></h1>
+            <h1 class="app-city" id="city">Paris</h1>
 
             <p class="app-details">
               Tuesday 14:49, scattered clouds <br />Humidity:
@@ -41,7 +46,7 @@
           </div>
           <div class="app-temperature-container">
             <div class="app-icon">⛅</div>
-            <div class="app-temperature" id="temperature"></div>
+            <div class="app-temperature" id="temperature">12</div>
             <div class="app-unit">°C</div>
           </div>
         </div>
@@ -61,6 +66,6 @@
         <a href="#" target="_blank"> hosted on Netlify</a>
       </footer>
     </div>
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
