inserted more weather data

--- a/index.html
+++ b/index.html
@@ -36,17 +36,18 @@
       <main>
         <div class="app-data">
           <div>
-            <h1 class="app-city" id="city">Paris</h1>
+            <h1 class="app-city" id="city"></h1>
 
             <p class="app-details">
-              Tuesday 14:49, scattered clouds <br />Humidity:
-              <strong>66%</strong>, Wind:
-              <strong> 3.13km/h </strong>
+              <span id="time"> </span>
+              <span id="description">scattered</span> clouds <br />Humidity:
+              <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"> </strong>
             </p>
           </div>
           <div class="app-temperature-container">
             <div class="app-icon">⛅</div>
-            <div class="app-temperature" id="temperature">12</div>
+            <div class="app-temperature" id="temperature"></div>
             <div class="app-unit">°C</div>
           </div>
         </div>
