--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
             </p>
           </div>
           <div class="app-temperature-container">
-            <div class="app-icon">⛅</div>
+            <div class="icon">
+              <img
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-day.png"
+                class="app-icon"
+              />
+            </div>
             <div class="app-temperature" id="temperature"></div>
             <div class="app-unit">°C</div>
           </div>
