added netlify url

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
             </p>
           </div>
           <div class="app-temperature-container">
-            <div class="icon">
+            <div id="icon">
               <img
                 src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-day.png"
                 class="app-icon"
+                id="app-icon"
               />
             </div>
             <div class="app-temperature" id="temperature"></div>
@@ -69,7 +70,9 @@
           >open sourced on Github</a
         >
         and
-        <a href="#" target="_blank"> hosted on Netlify</a>
+        <a href="https://weatherrsearch.netlify.app/" target="_blank">
+          hosted on Netlify</a
+        >
       </footer>
     </div>
     <script src="src/index.js"></script>
